# varnam-tools

./: .gitignore  CMakeLists.txt  README.md  labelstring.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  varnamcpp.h
css/: qss.css
